name:               builder
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            BSD3

executable site
  main-is: site.hs
  hs-source-dirs: .
  build-depends: base == 4.*
               , filepath
               , hakyll >= 4.10
               , hakyll-series
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Wmonomorphism-restriction
               -fwarn-tabs
               -O2
               -fno-diagnostics-show-caret
               -fdiagnostics-color=never
  default-language: Haskell2010
