name:               zarybnicky-com-builder
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            BSD3

executable site
  main-is: site.hs
  hs-source-dirs: .
  build-depends: base == 4.*
               , containers
               , filepath
               , hakyll
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Wmonomorphism-restriction
               -fwarn-tabs
               -O2

  default-language: Haskell2010
